--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,12 @@
  server {
     listen 80;
-    # server_name  domain1.com www.domain1.com;
-    # access_log   logs/domain1.access.log  main;
-    # root         html;
-
     location / {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
+
         proxy_pass http://test-docker-container:4000;
         proxy_redirect off;
     }
