--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,4 +10,15 @@
         proxy_pass http://test-docker-container:4000;
         proxy_redirect off;
     }
+ location /mongoExpress {
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-NginX-Proxy true;
+
+
+        proxy_pass http://mongo-express:8081;
+        proxy_redirect off;
+    }
+
   }
